new debug methods. Clean read for new book only!